test/e2e/chainsaw/check-deletion-policy/instance-gone.yaml
apiVersion: kro.run/v1alpha1
kind: CheckDeletionPolicyApp
metadata:
  name: test-instance
