test/e2e/chainsaw/check-deletion-policy/instance.yaml
apiVersion: kro.run/v1alpha1
kind: CheckDeletionPolicyApp
metadata:
  name: test-instance
spec:
  name: demo
