test/e2e/chainsaw/check-deletion-policy/removed-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: demo-removed
