test/e2e/chainsaw/check-deletion-policy/instance-assert.yaml
apiVersion: kro.run/v1alpha1
kind: CheckDeletionPolicyApp
metadata:
  name: test-instance
status:
  (conditions[?type == 'Ready']):
    - status: 'True'
  state: ACTIVE
