test/e2e/chainsaw/check-deletion-policy/rgd-assert.yaml
apiVersion: kro.run/v1alpha1
kind: ResourceGraphDefinition
metadata:
  name: check-deletion-policy-rgd
status:
  (conditions[?type == 'Ready']):
    - status: 'True'
  state: Active
